--- a/generator/pubspec.yaml
+++ b/generator/pubspec.yaml
@@ -14,7 +14,11 @@ dependencies:
   built_collection: ^4.2.0
   code_builder: ^3.2.0
   tuple: ^1.0.2
-  retrofit: ^1.3.4+1
+  retrofit:
+    git:
+      url: https://github.com/lyqiai/retrofit.dart.git
+      ref: dev
+      path: annotation
   analyzer: any
   dart_style: ^1.0.0
   build: ^1.2.2
